# krilly

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: coordinate-frames.md  setup-pi5.md
hardware/cad/: README.md  krilly-middle-plate.FCStd  krilly-roof.FCStd
hardware/cad/export/: README.md  krilly-middle-plate-Body.stl  krilly-roof-Body.stl
scripts/: README.md  calibrate.py  drive_demo.py  heading_demo.py  imu_stream.py  motor_chain.py  motor_spin.py  odometry_demo.py  red_detect.py  teleop.py
src/krilly/: __init__.py  logging_config.py
src/krilly/app/: __init__.py
src/krilly/config/: __init__.py  loader.py  maze.yaml  robot.yaml
src/krilly/hal/: __init__.py  camera.py  imu.py  l6470.py  l6470_chain.py
src/krilly/kinematics/: __init__.py  kiwi.py
src/krilly/localization/: __init__.py  estimator.py  grid.py
src/krilly/motion/: __init__.py  velocity_driver.py
src/krilly/perception/: __init__.py  red_wall.py
src/krilly/solver/: __init__.py  maze.py
src/krilly/strategy/: __init__.py
tests/: test_calibrate.py  test_estimator.py  test_grid.py  test_imu.py  test_kiwi.py  test_l6470.py  test_l6470_chain.py  test_maze.py  test_red_wall.py  test_smoke.py  test_teleop.py  test_velocity_driver.py
